// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@RabbitConsumer() decorator 1`] = `
Object {
  "type": "RabbitControllerType",
  "value": Object {
    "id": [Function],
    "target": [Function],
  },
}
`;

exports[`@RabbitConsumer() decorator 2`] = `true`;

exports[`@RabbitConsumer() decorator 3`] = `
Array [
  Object {
    "key": "consumer",
    "queue": "consumerTest",
    "type": "Consumer",
  },
]
`;

exports[`@RabbitController() decorator 1`] = `
Object {
  "type": "RabbitControllerType",
  "value": Object {
    "id": [Function],
    "target": [Function],
  },
}
`;

exports[`@RabbitController() decorator 2`] = `true`;

exports[`@RabbitListener() & @RabbitConsumer() decorator 1`] = `
Object {
  "type": "RabbitControllerType",
  "value": Object {
    "id": [Function],
    "target": [Function],
  },
}
`;

exports[`@RabbitListener() & @RabbitConsumer() decorator 2`] = `true`;

exports[`@RabbitListener() & @RabbitConsumer() decorator 3`] = `
Array [
  Object {
    "key": "listener",
    "queue": "listenerTest",
    "type": "Listener",
  },
  Object {
    "key": "consumer",
    "queue": "consumerTest",
    "type": "Consumer",
  },
]
`;

exports[`@RabbitListener() decorator 1`] = `
Object {
  "type": "RabbitControllerType",
  "value": Object {
    "id": [Function],
    "target": [Function],
  },
}
`;

exports[`@RabbitListener() decorator 2`] = `true`;

exports[`@RabbitListener() decorator 3`] = `
Array [
  Object {
    "key": "listener",
    "queue": "listenerTest",
    "type": "Listener",
  },
]
`;
